deploy/local/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justice-gov-uk-local
spec:
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: justice-gov-uk-local
  template:
    metadata:
      labels:
        app: justice-gov-uk-local
    spec:
      volumes:
        - name: uploads
          emptyDir: {}
      containers:
        - name: nginx
          image: justice-nginx:latest
          imagePullPolicy: Never
          resources: {}
          ports:
            - containerPort: 8080

        - name: fpm
          image: justice-fpm:latest
          imagePullPolicy: Never
          securityContext:
            runAsUser: 82
          volumeMounts:
            - name: uploads
              mountPath: /var/www/html/public/app/uploads
          resources: {}
          ports:
            - containerPort: 9000
