deploy/local/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: justice-gov-uk-local
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: justice-gov-uk-local
