deploy/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: justice-gov-uk-local-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  rules:
  - host: justice.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
